<resources>
    <string name="app_name">QueueUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    // MainActivity - Login

    <string name="app_senha">Senha</string>
    <string name="app_entrar">Entrar</string>
    <string name="app_cad">Cadastre-se</string>
    <string name="app_esqsenha">Esqueceu sua senha?</string>
    //PopUp
    <string name="app_usuario">Usuário</string>
    <string name="app_restaurante">Restaurante</string>
    //Cadastro Usuario
    <string name="app_nome">Nome</string>
    <string name="app_cadastro">Cadastrar</string>
    //Cadastro Restaurante
    <string name="app_rsocial">Razão Social</string>
    <string name="app_cnpj">CNPJ</string>
    <string name="app_tel">Telefone</string>
    <string name="app_estado">Estado</string>
    <string name="app_cidade">Cidade</string>
    <string name="app_end">Endereço</string>
    <string name="app_numero">Numero</string>
    <string name="app_especialidade">Especialidade</string>
    //Main reustaurante
    <string name="app_mesa">Liberar Mesas</string>
    <string name="app_fila">Monitorar Fila</string>
    <string name="app_horario">Horário: 00am-00pm</string>

    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="fila_de_espera">Fila de Espera</string>
    <string name="perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Spinner -->
    <string-array name="num_pessoasMesas">
        <item>Mesa para 2 pessoas</item>
        <item>Mesa para 3 pessoas</item>
        <item>Mesa para 4 pessoas</item>
        <item>Mesa para 6 pessoas</item>
    </string-array>
    <string name="action_settings">Configurações</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

</resources>
